2007-11-07  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5772: IRRE - Combination mode doesn't save new child records correctly

2007-11-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Bug #6561 revised: Registers IMAGE_NUM and IMAGE_NUM_CURRENT contained incorrect array indizes (Thanks to Helmut Hummel)

2007-11-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 6640: htmlArea RTE tool bar is not updated in IE when up or down arrow is pressed

2007-11-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 6476: htmlArea RTE incorrectly nests tags on return key in FF
	* Update version number of rtehtmlarea to 1.5.5

2007-10-30  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6618: Web->List: Add title to versioning symbol in extended view	(Thanks to Christian Kuhn)

2007-10-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5338: Error installing suggested extensions

2007-10-29	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6581: Fatal error in TCEForms: Fatal error: Cannot use string offset as an array
	* Fixed bug #6565: T3DataStructure with sheet references will not show sheetTitle,sheetDescription and sheetShortDescr
	* Fixed bug #5347: Flexforms dosen't resolve sheets
	* Fixed bug #3969: Missing sheets inclusion in flexforms?

2007-10-27  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #1940: "OPEN DOCUMENTS" causes 404 error (Thanks to Christian Trabold)
	* Fixed bug #5082: Clean up a nested htmlspecialchars() in class.db_list_extra.inc (Thanks to Christian Kuhn)
	* Fixed bug #6561: imgMax and imgStart (IMGTEXT) not working properly (Thanks to Helmut Hummel)

2007-10-26  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug 5031: htmlArea RTE incorrectly processes col tags and default proc options disallow col and colgroup tags

2007-10-22  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.1.3

2007-10-22  Andreas Otto  <andreas.otto@dkd.de>
