@@ -1,6 +1,7 @@
 2007-11-07  Oliver Hader  <oh@inpublica.de>
 
 	* Fixed bug #5772: IRRE - Combination mode doesn't save new child records correctly
+	* Fixed bug #6456: IRRE - Palettes are not rendered correctly on nesting records using the same table
 
 2007-11-02  Ingmar Schlecht  <ingmar@typo3.org>
 
